--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <title>layout-designer-project-lvl1-mr.konchulizov@mail.ru</title>
 
     <link rel="stylesheet" href="styles/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-
+    <header>Header</header>
+    <main>Main content</main>
+    <footer>Footer</footer>
 </body>
 </html>
