--- a/index.html
+++ b/index.html
@@ -11,7 +11,21 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>Header</header>
+
+    <header class="header fixed">
+        <div class="header-logo">
+            <div class="header-logo-img"><img src="/images/logo.svg" alt="ЖК Лунное море"></div>
+            <div class="header-logo-text">Лунное море</div>
+        </div>
+        <nav class="header-nav">
+            <ul class="header-nav-list">
+                <li><a href="#">Преимущества</a></li>
+                <li><a href="#">О ЖК</a></li>
+                <li><a href="#">Места для отдыха</a></li>
+            </ul>
+        </nav>
+    </header>
+    
     <main>Main content</main>
     <footer>Footer</footer>
 </body>
