--- a/index.html
+++ b/index.html
@@ -25,8 +25,21 @@
             </ul>
         </nav>
     </header>
-    
-    <main>Main content</main>
+
+    <main>
+        <div class="first-section">
+            <div class="first-section-logo">
+                <img src="/images/logo.svg" alt="ЖК Лунное море">
+            </div>
+            <div class="first-section-text">
+                <h1>ЖК «Лунное море»</h1>
+                <p>Место, откуда не хочется улетать</p>
+            </div>
+            <div class="first-section-button">
+                <div class="button"><a href="#">Забронировать</a></div>
+            </div>
+        </div>
+    </main>
     <footer>Footer</footer>
 </body>
 </html>
