--- a/index.html
+++ b/index.html
@@ -12,34 +12,80 @@
 </head>
 <body>
 
-    <header class="header fixed">
-        <div class="header-logo">
-            <div class="header-logo-img"><img src="/images/logo.svg" alt="ЖК Лунное море"></div>
-            <div class="header-logo-text">Лунное море</div>
+    <header class="relative">
+
+        <div class="header header-fixed-panel fixed">
+            <div class="header-logo">
+                <div class="header-logo-img"><img src="/images/logo.svg" alt="ЖК Лунное море"></div>
+                <div class="header-logo-text">Лунное море</div>
+            </div>
+            <nav class="header-nav">
+                <ul class="header-nav-list">
+                    <li><a href="#">Преимущества</a></li>
+                    <li><a href="#">О ЖК</a></li>
+                    <li><a href="#">Места для отдыха</a></li>
+                </ul>
+            </nav>
         </div>
-        <nav class="header-nav">
-            <ul class="header-nav-list">
-                <li><a href="#">Преимущества</a></li>
-                <li><a href="#">О ЖК</a></li>
-                <li><a href="#">Места для отдыха</a></li>
-            </ul>
-        </nav>
+
+        <div class="header-baner">
+
+            <div class="baner-section">
+                <div class="baner-section-logo">
+                    <img src="/images/logo.svg" alt="ЖК Лунное море">
+                </div>
+                <div class="baner-section-text">
+                    <h1>ЖК «Лунное море»</h1>
+                    <p>Место, откуда не хочется улетать</p>
+                </div>
+                <div class="baner-section-button">
+                    <div class="button"><a href="#">Забронировать</a></div>
+                </div>
+            </div>
+
+        </div>
+
+
     </header>
 
-    <main>
-        <div class="first-section">
-            <div class="first-section-logo">
-                <img src="/images/logo.svg" alt="ЖК Лунное море">
+    <main class="main-content">
+
+            <div class="main-first-section">
+                <div class="main-first-section-item">
+                    <h2>Уникальный вид</h2>
+                    <p>Вид на космос из вашего окна. Мы построили дома с большими окнами, чтобы вы могли наслаждаться метеоритными потоками.</p>
+                </div>
+                <div class="main-first-section-item">
+                    <h2>Инфраструктура</h2>
+                    <p>Прекрасные дороги рядом с домом. Много мест для прогулки. Всего в 200 км. от посёлка находится кольцо гор Кордильеры, на которых вы сможете провести незабываемые выходные.</p>
+                </div>
+                <div class="main-first-section-item">
+                    <h2>Близость к Москве</h2>
+                    <p>При небольшой цене мы располагаемся близко к МКАД. Всего 384 000 километров и вы в самом сердце России.</p>
+                </div>
             </div>
-            <div class="first-section-text">
-                <h1>ЖК «Лунное море»</h1>
-                <p>Место, откуда не хочется улетать</p>
+
+            <div class="main-second-section dark-section">
+                <div class="second-section-item item-text">
+                    <h2>О ЖК «Лунное море»</h2>
+                    <p>Все чаще жители Москвы предпочитают загородный дом городской квартире, к тому же связь с мегаполисом не теряется – современные скоростные трассы позволяют без труда добираться до столицы и обратно.</p>
+                    <p>Мы построили наши дома на самом близком к Солнцу спутнике, всего в 380 тысяч километров от Земли.</p>
+                </div>
+                <div class="second-section-item item-img"><img src="/images/moon-1.jpg" alt="О ЖК Лунное море"></div>
             </div>
-            <div class="first-section-button">
-                <div class="button"><a href="#">Забронировать</a></div>
+
+            <div class="main-third-section">
+                <div class="third-section-item item-img"><img src="/images/moon-2.jpg" alt="О ЖК Лунное море"></div>
+                <div class="third-section-item item-text">
+                    <h2>Места для отдыха</h2>
+                    <p>Луна обладает всеми условиями для комфортного отдыха от большого города. В вашем распоряжении 22 моря и 18 гор. Самое ближайшее кольцо гор всего в 200 километров от вашей квартиры.</p>
+                    <p>Дома располагаются в новом районе «Лунные моря». При необходимости есть автобусы до района «Лунный материк».</p>
+                </div>
             </div>
-        </div>
+
     </main>
+
+
     <footer>Footer</footer>
 </body>
 </html>
