--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <main class="main-content">
 
-            <div class="main-first-section">
+            <section class="main-first-section">
                 <div class="main-first-section-item">
                     <h2>Уникальный вид</h2>
                     <p>Вид на космос из вашего окна. Мы построили дома с большими окнами, чтобы вы могли наслаждаться метеоритными потоками.</p>
@@ -63,25 +63,25 @@
                     <h2>Близость к Москве</h2>
                     <p>При небольшой цене мы располагаемся близко к МКАД. Всего 384 000 километров и вы в самом сердце России.</p>
                 </div>
-            </div>
+            </section>
 
-            <div class="main-second-section dark-section">
+            <section class="main-second-section dark-section">
                 <div class="second-section-item item-text">
                     <h2>О ЖК «Лунное море»</h2>
                     <p>Все чаще жители Москвы предпочитают загородный дом городской квартире, к тому же связь с мегаполисом не теряется – современные скоростные трассы позволяют без труда добираться до столицы и обратно.</p>
                     <p>Мы построили наши дома на самом близком к Солнцу спутнике, всего в 380 тысяч километров от Земли.</p>
                 </div>
                 <div class="second-section-item item-img"><img src="/images/moon-1.jpg" alt="О ЖК Лунное море"></div>
-            </div>
+            </section>
 
-            <div class="main-third-section">
+            <section class="main-third-section">
                 <div class="third-section-item item-img"><img src="/images/moon-2.jpg" alt="О ЖК Лунное море"></div>
                 <div class="third-section-item item-text">
                     <h2>Места для отдыха</h2>
                     <p>Луна обладает всеми условиями для комфортного отдыха от большого города. В вашем распоряжении 22 моря и 18 гор. Самое ближайшее кольцо гор всего в 200 километров от вашей квартиры.</p>
                     <p>Дома располагаются в новом районе «Лунные моря». При необходимости есть автобусы до района «Лунный материк».</p>
                 </div>
-            </div>
+            </section>
 
     </main>
 
