--- a/index.html
+++ b/index.html
@@ -133,6 +133,40 @@
     </main>
 
 
-    <footer>Footer</footer>
+    <footer>
+        <div class="footer-section-item">
+
+            <div class="section-item-list logo-item">
+                <img class="footer-logo-img" src="/images/logo.svg" alt="Логотип"> <span>Лунное море</span>
+            </div>
+            <div class="section-item-list copyright">
+                &copy; 2032 год
+            </div>
+
+        </div>
+        <div class="footer-item">
+
+            <div class="section-item-list">
+                <h3>Проектная документация</h3>
+                <ul>
+                    <li><a href="#">Скачать</a></li>
+                    <li><a href="#">Посмотреть на сайте</a></li>
+                </ul>
+            </div>
+
+        </div>
+        <div class="footer-item">
+
+            <div class="section-item-list">
+                <h3>О застройщике</h3>
+                <ul>
+                    <li><a href="#">Отзывы</a></li>
+                    <li><a href="#">Сайт компании</a></li>
+                </ul>
+            </div>
+
+        </div>
+    </footer>
+
 </body>
 </html>
