--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             </div>
             <nav class="header-nav">
                 <ul class="header-nav-list">
-                    <li><a href="#">Преимущества</a></li>
-                    <li><a href="#">О ЖК</a></li>
-                    <li><a href="#">Места для отдыха</a></li>
+                    <li><a href="#advantages">Преимущества</a></li>
+                    <li><a href="#about">О ЖК</a></li>
+                    <li><a href="#vacation-spots">Места для отдыха</a></li>
                 </ul>
             </nav>
         </div>
@@ -50,7 +50,7 @@
 
     <main class="main-content">
 
-            <section class="main-first-section">
+            <section id="advantages" class="main-first-section">
                 <div class="main-first-section-item">
                     <h2>Уникальный вид</h2>
                     <p>Вид на космос из вашего окна. Мы построили дома с большими окнами, чтобы вы могли наслаждаться метеоритными потоками.</p>
@@ -65,7 +65,7 @@
                 </div>
             </section>
 
-            <section class="main-second-section dark-section">
+            <section id="about" class="main-second-section dark-section">
                 <div class="second-section-item item-text">
                     <h2>О ЖК «Лунное море»</h2>
                     <p>Все чаще жители Москвы предпочитают загородный дом городской квартире, к тому же связь с мегаполисом не теряется – современные скоростные трассы позволяют без труда добираться до столицы и обратно.</p>
@@ -74,7 +74,7 @@
                 <div class="second-section-item item-img"><img src="/images/moon-1.jpg" alt="О ЖК Лунное море"></div>
             </section>
 
-            <section class="main-third-section">
+            <section id="vacation-spots" class="main-third-section">
                 <div class="third-section-item item-img"><img src="/images/moon-2.jpg" alt="О ЖК Лунное море"></div>
                 <div class="third-section-item item-text">
                     <h2>Места для отдыха</h2>
