--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <header class="relative">
+    <header>
 
         <div class="header header-fixed-panel fixed">
             <div class="header-logo">
@@ -28,68 +28,78 @@
             </nav>
         </div>
 
+        <div class="indent"></div>
+
     </header>
 
-    <main class="main-content">
+    <main>
 
-            <section class="baner">
+        <section>
 
-                <div class="baner-section">
-                    <div class="baner-section-logo">
+            <div class="wrapper-landscape">
+                <div class="landscape-section">
+                    <div class="landscape-section-logo">
                         <img src="/images/logo.svg" alt="ЖК Лунное море">
                     </div>
-                    <div class="baner-section-text">
+                    <div class="landscape-section-text">
                         <h1>ЖК «Лунное море»</h1>
                         <p>Место, откуда не хочется улетать</p>
                     </div>
-                    <div class="baner-section-button">
+                    <div class="landscape-section-button">
                         <div class="button"><a href="#form-section">Забронировать</a></div>
                     </div>
                 </div>
+            </div>
 
-            </section>
+        </section>
 
-            <section id="advantages" class="advantages">
+        <section id="advantages" class="advantages">
 
-                <div class="advantages-item">
-                    <h2>Уникальный вид</h2>
-                    <p>Вид на космос из вашего окна. Мы построили дома с большими окнами, чтобы вы могли наслаждаться метеоритными потоками.</p>
+            <div class="advantages-item">
+                <h2>Уникальный вид</h2>
+                <p>Вид на космос из вашего окна. Мы построили дома с большими окнами, чтобы вы могли наслаждаться метеоритными потоками.</p>
+            </div>
+            <div class="advantages-item">
+                <h2>Инфраструктура</h2>
+                <p>Прекрасные дороги рядом с домом. Много мест для прогулки. Всего в 200 км. от посёлка находится кольцо гор Кордильеры, на которых вы сможете провести незабываемые выходные.</p>
+            </div>
+            <div class="advantages-item">
+                <h2>Близость к Москве</h2>
+                <p>При небольшой цене мы располагаемся близко к МКАД. Всего 384 000 километров и вы в самом сердце России.</p>
+            </div>
+
+        </section>
+
+        <section id="about">
+
+            <div class="wrapper-dark">
+                <div class="about-section">
+                    <div class="about-section-item item-text">
+                        <h2>О ЖК «Лунное море»</h2>
+                        <p>Все чаще жители Москвы предпочитают загородный дом городской квартире, к тому же связь с мегаполисом не теряется – современные скоростные трассы позволяют без труда добираться до столицы и обратно.</p>
+                        <p>Мы построили наши дома на самом близком к Солнцу спутнике, всего в 380 тысяч километров от Земли.</p>
+                    </div>
+                    <div class="about-section-item item-img"><img src="/images/moon-1.jpg" alt="О ЖК Лунное море"></div>
                 </div>
-                <div class="advantages-item">
-                    <h2>Инфраструктура</h2>
-                    <p>Прекрасные дороги рядом с домом. Много мест для прогулки. Всего в 200 км. от посёлка находится кольцо гор Кордильеры, на которых вы сможете провести незабываемые выходные.</p>
-                </div>
-                <div class="advantages-item">
-                    <h2>Близость к Москве</h2>
-                    <p>При небольшой цене мы располагаемся близко к МКАД. Всего 384 000 километров и вы в самом сердце России.</p>
-                </div>
+            </div>
 
-            </section>
+        </section>
 
-            <section id="about" class="about-section dark-section">
+        <section id="vacation-spots" class="vacation-spots">
 
-                <div class="about-section-item item-text">
-                    <h2>О ЖК «Лунное море»</h2>
-                    <p>Все чаще жители Москвы предпочитают загородный дом городской квартире, к тому же связь с мегаполисом не теряется – современные скоростные трассы позволяют без труда добираться до столицы и обратно.</p>
-                    <p>Мы построили наши дома на самом близком к Солнцу спутнике, всего в 380 тысяч километров от Земли.</p>
-                </div>
-                <div class="about-section-item item-img"><img src="/images/moon-1.jpg" alt="О ЖК Лунное море"></div>
+            <div class="vacation-spots-item item-img"><img src="/images/moon-2.jpg" alt="О ЖК Лунное море"></div>
+            <div class="vacation-spots-item item-text">
+                <h2>Места для отдыха</h2>
+                <p>Луна обладает всеми условиями для комфортного отдыха от большого города. В вашем распоряжении 22 моря и 18 гор. Самое ближайшее кольцо гор всего в 200 километров от вашей квартиры.</p>
+                <p>Дома располагаются в новом районе «Лунные моря». При необходимости есть автобусы до района «Лунный материк».</p>
+            </div>
 
-            </section>
 
-            <section id="vacation-spots" class="vacation-spots">
+        </section>
 
-                <div class="vacation-spots-item item-img"><img src="/images/moon-2.jpg" alt="О ЖК Лунное море"></div>
-                <div class="vacation-spots-item item-text">
-                    <h2>Места для отдыха</h2>
-                    <p>Луна обладает всеми условиями для комфортного отдыха от большого города. В вашем распоряжении 22 моря и 18 гор. Самое ближайшее кольцо гор всего в 200 километров от вашей квартиры.</p>
-                    <p>Дома располагаются в новом районе «Лунные моря». При необходимости есть автобусы до района «Лунный материк».</p>
-                </div>
+        <section id="form-section">
 
-            </section>
-
-            <section id="form-section" class="form-section dark-section">
-
+            <div class="wrapper-dark">
                 <div class="form-center">
                     <h2>Отправьте заявку сегодня!</h2>
                     <form action="#">
@@ -134,8 +144,11 @@
                         <input class="form-button" type="submit">
                     </form>
                 </div>
+            </div>
 
-            </section>
+
+
+        </section>
 
     </main>
 
