--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
 
         <div class="header fixed-header">
-            <div class="header-logo d-flex-center">
+            <div class="d-flex-center">
                 <div class="w-45 h-auto"><img src="/images/logo.svg" alt="ЖК Лунное море"></div>
                 <div class="header-logo-text">Лунное море</div>
             </div>
@@ -34,27 +34,20 @@
 
     <main>
 
-        <section class="wrapper-landscape">
+        <section class="wrapper-landscape justify-content-center">
 
-            <div class="landscape-section d-flex-center">
-
+            <div class="landscape-section d-flex-center justify-content-center">
                 <img class="w-150 h-auto" src="/images/logo.svg" alt="ЖК Лунное море">
-
-                <div class="landscape-section-text">
-                    <h1>ЖК «Лунное море»</h1>
-                    <p>Место, откуда не хочется улетать</p>
-                </div>
-                <div class="btn">
-                    <div class="button btn-white"><a href="#form-section">Забронировать</a></div>
-                </div>
+								<h1>ЖК «Лунное море»</h1>
+								<p>Место, откуда не хочется улетать</p>
+                <div class="btn btn-white"><a href="#form-section">Забронировать</a></div>
             </div>
-
 
         </section>
 
         <section id="advantages">
 
-            <div  class="advantages">
+            <div  class="container justify-content-space-evenly">
                 <div class="advantages-item">
                     <h2>Уникальный вид</h2>
                     <p>Вид на космос из вашего окна. Мы построили дома с большими окнами, чтобы вы могли наслаждаться метеоритными потоками.</p>
@@ -71,34 +64,35 @@
 
         </section>
 
-        <section id="about" class="wrapper-gray">
+        <section id="about" class="bg-gray">
 
-            <div class="about-section">
-                <div class="about-section-item item-text">
+            <div class="container justify-content-center">
+                <div class="container-item">
                     <h2>О ЖК «Лунное море»</h2>
                     <p>Все чаще жители Москвы предпочитают загородный дом городской квартире, к тому же связь с мегаполисом не теряется – современные скоростные трассы позволяют без труда добираться до столицы и обратно.</p>
                     <p>Мы построили наши дома на самом близком к Солнцу спутнике, всего в 380 тысяч километров от Земли.</p>
                 </div>
-                <div class="about-section-item item-img"><img src="/images/moon-1.jpg" alt="О ЖК Лунное море"></div>
+                <div class="container-item item-img"><img src="/images/moon-1.jpg" alt="О ЖК Лунное море"></div>
             </div>
 
         </section>
 
-        <section id="vacation-spots" class="vacation-spots">
+        <section id="vacation-spots">
 
-            <div class="vacation-spots-item item-img"><img src="/images/moon-2.jpg" alt="О ЖК Лунное море"></div>
-            <div class="vacation-spots-item item-text">
-                <h2>Места для отдыха</h2>
+					<div class="container justify-content-center">
+						<div class="container-item"><img src="/images/moon-2.jpg" alt="Космонавт"></div>
+            <div class="container-item">
+							<h2>Места для отдыха</h2>
                 <p>Луна обладает всеми условиями для комфортного отдыха от большого города. В вашем распоряжении 22 моря и 18 гор. Самое ближайшее кольцо гор всего в 200 километров от вашей квартиры.</p>
                 <p>Дома располагаются в новом районе «Лунные моря». При необходимости есть автобусы до района «Лунный материк».</p>
-            </div>
-
+						</div>
+					</div>
 
         </section>
 
-        <section id="form-section" class="wrapper-gray">
+        <section id="form-section" class="bg-gray">
 
-            <div class="form-center">
+            <div class="container form-center">
                 <h2>Отправьте заявку сегодня!</h2>
                 <form action="#">
                     <fieldset class="select-group">
@@ -139,7 +133,7 @@
                             </div>
                         </div>
                     </fieldset>
-                    <input class="btn form-button" type="submit">
+                    <input class="btn form-button" type="submit" value="Отправить">
                 </form>
             </div>
 
