--- a/index.html
+++ b/index.html
@@ -36,29 +36,29 @@
 
         <section class="wrapper-landscape">
 
-					<div class="container">
-						<div class="landscape-section d-flex-center">
-							<img class="w-150 h-auto" src="/images/logo.svg" alt="ЖК Лунное море">
-							<h1>ЖК «Лунное море»</h1>
-							<p>Место, откуда не хочется улетать</p>
-							<div class="btn btn-white"><a href="#form-section">Забронировать</a></div>
-						</div>
-					</div>
+            <div class="container">
+                <div class="landscape-section d-flex-center flex-d-col">
+                    <img class="w-150 h-auto" src="/images/logo.svg" alt="ЖК Лунное море">
+                    <h1>ЖК «Лунное море»</h1>
+                    <p>Место, откуда не хочется улетать</p>
+                    <div class="btn btn-white"><a href="#form-section">Забронировать</a></div>
+                </div>
+            </div>
 
         </section>
 
         <section id="advantages">
 
             <div  class="container justify-content-space-evenly">
-                <div class="advantages-item">
+                <div class="m-x-10 w-30">
                     <h2>Уникальный вид</h2>
                     <p>Вид на космос из вашего окна. Мы построили дома с большими окнами, чтобы вы могли наслаждаться метеоритными потоками.</p>
                 </div>
-                <div class="advantages-item">
+                <div class="m-x-10 w-30">
                     <h2>Инфраструктура</h2>
                     <p>Прекрасные дороги рядом с домом. Много мест для прогулки. Всего в 200 км. от посёлка находится кольцо гор Кордильеры, на которых вы сможете провести незабываемые выходные.</p>
                 </div>
-                <div class="advantages-item">
+                <div class="m-x-10 w-30">
                     <h2>Близость к Москве</h2>
                     <p>При небольшой цене мы располагаемся близко к МКАД. Всего 384 000 километров и вы в самом сердце России.</p>
                 </div>
@@ -69,12 +69,12 @@
         <section id="about" class="bg-gray">
 
             <div class="container justify-content-center">
-                <div class="container-item">
+                <div class="m-x-auto w-40">
                     <h2>О ЖК «Лунное море»</h2>
                     <p>Все чаще жители Москвы предпочитают загородный дом городской квартире, к тому же связь с мегаполисом не теряется – современные скоростные трассы позволяют без труда добираться до столицы и обратно.</p>
                     <p>Мы построили наши дома на самом близком к Солнцу спутнике, всего в 380 тысяч километров от Земли.</p>
                 </div>
-                <img class="container-item" src="/images/moon-1.jpg" alt="О ЖК Лунное море">
+                <img class="m-x-auto w-40" src="/images/moon-1.jpg" alt="О ЖК Лунное море">
             </div>
 
         </section>
@@ -82,8 +82,8 @@
         <section id="vacation-spots">
 
 					<div class="container justify-content-center">
-						<img class="container-item" src="/images/moon-2.jpg" alt="Космонавт">
-            <div class="container-item">
+						<img class="m-x-auto w-40" src="/images/moon-2.jpg" alt="Космонавт">
+            <div class="m-x-auto w-40">
 							<h2>Места для отдыха</h2>
                 <p>Луна обладает всеми условиями для комфортного отдыха от большого города. В вашем распоряжении 22 моря и 18 гор. Самое ближайшее кольцо гор всего в 200 километров от вашей квартиры.</p>
                 <p>Дома располагаются в новом районе «Лунные моря». При необходимости есть автобусы до района «Лунный материк».</p>
@@ -94,14 +94,14 @@
 
         <section id="form-section" class="bg-gray">
 
-            <div class="container form-center">
+            <div class="container d-flex-center flex-d-col">
                 <h2>Отправьте заявку сегодня!</h2>
                 <form action="#">
 
                     <fieldset class="main-form-fieldset">
                         <legend>Параметры квартиры</legend>
                         <div class="select-group">
-                            <div class="select select-rooms d-flex-center">
+                            <div class="select-rooms d-flex-center space-between">
                                 <p>Количество комнат:</p>
                                 <select name="rooms">
                                     <option value="value1" selected>1</option>
@@ -109,7 +109,7 @@
                                     <option value="value3">3</option>
                                 </select>
                             </div>
-                            <div class="select select-trim d-flex-center">
+                            <div class="select-trim d-flex-center space-between">
                                 <p>Отделка:</p>
                                 <select name="trim">
                                     <option value="value1" selected>Без отделки</option>
@@ -118,7 +118,7 @@
                                 </select>
                             </div>
                         </div>
-										</fieldset>
+                    </fieldset>
 
                     <fieldset class="main-form-fieldset fieldset-input-group">
                         <legend>Контактная информация:</legend>
@@ -136,9 +136,9 @@
                                 <input type="email">
                             </div>
                         </div>
-										</fieldset>
+                    </fieldset>
 
-										<input class="btn form-button" type="submit" value="Отправить">
+                    <input class="btn form-button" type="submit" value="Отправить">
 
                 </form>
             </div>
@@ -150,37 +150,38 @@
 
     <footer class="page-footer">
 
-			<div class="footer-container">
-				<div class="footer-section-item">
-					<div class="section-item-list logo-item">
-							<img class="w-45 h-auto" src="/images/logo.svg" alt="Логотип"> <span>Лунное море</span>
+			<div class="container space-between color-white">
+
+				<div>
+					<div class="d-flex-center">
+                        <img class="w-45 h-auto" src="/images/logo.svg" alt="Логотип"> <span>Лунное море</span>
 					</div>
-					<div class="section-item-list copyright">
-							&copy; 2032 год
+					<div class="m-t-15">
+                        &copy; 2032 год
 					</div>
 				</div>
 
-        <div class="footer-item">
-					<div class="section-item-list">
-							<h3>Проектная документация</h3>
-							<ul>
-									<li><a href="#">Скачать</a></li>
-									<li><a href="#">Посмотреть на сайте</a></li>
-							</ul>
+                <div>
+					<div>
+                        <h3>Проектная документация</h3>
+                        <ul>
+                            <li><a href="#">Скачать</a></li>
+                            <li><a href="#">Посмотреть на сайте</a></li>
+                        </ul>
 					</div>
 				</div>
 
-        <div class="footer-item">
-					<div class="section-item-list">
-							<h3>О застройщике</h3>
-							<ul>
-									<li><a href="#">Отзывы</a></li>
-									<li><a href="#">Сайт компании</a></li>
-							</ul>
+                <div>
+					<div>
+                        <h3>О застройщике</h3>
+                        <ul>
+                            <li><a href="#">Отзывы</a></li>
+                            <li><a href="#">Сайт компании</a></li>
+                        </ul>
 					</div>
-        </div>
+                </div>
+
 			</div>
-
 
     </footer>
 
